--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -13,7 +13,7 @@
           <li><a href="/asterbot">Aster Robot</a></li>
           <li><a href="/otto">Otto Robot</a></li>
           <li><a href="/home_automation">Home Automation</a></li>
-          <li><a href="#">Dog Head</a></li>
+          <li><a href="/doghead">Dog Head</a></li>
           <li><a href="/humanoid_robot">Humonoid Robot</a></li>
           <li><a href="/obstraction_avoiding_car">Obstacle Avoidance Car</a></li>
           <li><a href="#">Real Time Clock</a></li>
@@ -114,7 +114,7 @@
             <div class="slide">
                 <div class="category-card">
                     <h3>Robotics</h3>
-                    <img src="{% static 'images/Robotics.png' %}" alt="Electronics">
+                    <a href = "robotics" ><img src="{% static 'images/Robotics.png' %}" alt="Electronics"></a>
                     <p>Robotics projects involve creating robots with sensors, actuators, and controllers.</p>
                 </div>
                 <div class="category-card">
