update in login and regsiter page

--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -228,7 +228,7 @@
 
     <div class="product-card">
         <a href="/asterbot">
-            <img src="{% static 'images/product4.jpg' %}" alt="Asterbot">
+            <img src="{% static 'images/productaster4.jpg' %}" alt="Asterbot">
         </a>
         <h3>Asterbot</h3>
     </div>
