--- a/Eapp/templates/login.html
+++ b/Eapp/templates/login.html
@@ -1,4 +1,4 @@
- {% extends 'base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Login{% endblock %}
 
@@ -27,4 +27,17 @@
     </div>
     <p>Don't have an account? <a href="../Registration/Registration.html" style="color: blue; text-decoration: underline;">Register here</a></p>
 
+<script>
+    document.getElementById('loginForm').addEventListener('submit', function(event) {
+        event.preventDefault();
+        alert('Login button clicked!');
+    });
+</script>
+  </div>
+<script>
+    document.getElementById('loginForm').addEventListener('submit', function(event) {
+        event.preventDefault();
+        alert('Login button clicked!');
+    });
+</script>
 {% endblock %}
