--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -779,6 +779,7 @@ footer {
 /*Login page*/
 
 /* Main Login Container */
+/* Main Login Container */
 .login-container {
     max-width: 400px;
     margin: auto;
@@ -787,10 +788,13 @@ footer {
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    margin-top: 55px;  /* Yeh already tha */
+    margin-top: 100px;  /* Yeh already tha */
     margin-bottom: 150px;  /* Yeh badhaya */
 }
 
+.dark-mode .login-container{
+  color: black;
+}
 
 /* Login Title */
 .login-title {
@@ -870,9 +874,6 @@ footer {
     gap: 10px;
     margin-top: 10px;
 }
-.dark-mode .login-container{
-  color:#000;
-}
 
 .social-btn {
     display: flex;
@@ -896,9 +897,7 @@ footer {
     width: 20px;
     height: 20px;
 }
-.dark-mode .social-btn{
-  color:#000;
-}
+
 /* Register Link */
 .login-container p {
     font-size: 14px;
@@ -926,6 +925,7 @@ footer {
 
 /* Register page*/
 
+/* Main Register Container */
 /* Main Register Container */
 .register-container {
     display: flex;
