--- a/Eapp/templates/register.html
+++ b/Eapp/templates/register.html
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="register-container">
     <!-- Left Section: Registration Form -->
     <div class="register-box">
         <h1 style="text-align: center;"><b>Register</b></h1>
@@ -24,6 +24,15 @@
                     <div class="input-group">
                         <label>UserName</label>
                         <input type="text" name="username" required>
+                    </div>
+
+                    <div class="input-group">
+                        <label>Gender</label>
+                        <select name="gender" required>
+                            <option value="">Select</option>
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                        </select>
                     </div>
 
                     <div class="input-group">
