--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -27,13 +27,7 @@
     <script src="https://cdn.tailwindcss.com/3.4.5?plugins=forms@0.5.7,typography@0.5.13,aspect-ratio@0.4.2,container-queries@0.1.1"></script>
 
 <!-- End  -->
-
-
-
   <style>
-
-
-
     body {
       background-color: #e9e8e8;
     margin: 0;
@@ -1070,7 +1064,14 @@ form {
         max-width: 100%;
     }
 }
-
+.roboto-Roboto {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 00;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
   </style>
   {% block css %}{% endblock %}
 </head>
