--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -16,7 +16,7 @@
           <li><a href="/doghead">Dog Head</a></li>
           <li><a href="/humanoid_robot">Humonoid Robot</a></li>
           <li><a href="/obstraction_avoiding_car">Obstacle Avoidance Car</a></li>
-          <li><a href="#">Real Time Clock</a></li>
+          <li><a href="/realtimeclock">Real Time Clock</a></li>
         </ul>
       </div>
 
@@ -207,7 +207,7 @@
   <div class="product-grid">
     <div class="product-card">
         <a href="/otto">
-            <img src="{% static 'images/product1.jpg' %}" alt="Ott Robot">
+            <img src="{% static 'images/product1.jpg' %}" alt="Otto Robot">
         </a>
         <h3>Ottobot</h3>
     </div>
@@ -240,19 +240,19 @@
     </div>
     <div class="product-card">
         <a href="/Obstacle_Avoidance_Car">
-            <img src="{% static 'images/product6.png' %}" alt="Dog Head">
+            <img src="{% static 'images/product6.png' %}" alt="Obstacle_Avoidance_Car">
         </a>
         <h3>Obstacle Avoidance Car</h3>
     </div>
     <div class="product-card">
         <a href="/RealtimeClock">
-            <img src="{% static 'images/product7.png' %}" alt="Dog Head">
+            <img src="{% static 'images/product7.png' %}" alt="Real Time Clock">
         </a>
         <h3>Real time Clock</h3>
     </div>
     <div class="product-card">
         <a href="/HumanoidRobot">
-            <img src="{% static 'images/product8.png' %}" alt="Dog Head">
+            <img src="{% static 'images/Humanoid Robot.png' %}" alt="Humanoid Robot">
         </a>
         <h3>Humanoid Robot</h3>
     </div>
