--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -1102,7 +1102,7 @@ form {
     <div class="nav-links">
       <!-- Products Dropdown -->
   <!-- Products Dropdown -->
-      <a href="/home">Home</a>
+      <a href="{% url 'home' %}">Home</a>
       <div class="dropdown">
         <a href="#">Domains <i class="fa-solid fa-chevron-down"></i></a>
         <div class="dropdown-content">
