--- a/Eapp/templates/technology_detail.html
+++ b/Eapp/templates/technology_detail.html
@@ -5,6 +5,9 @@
 
 {% block css %}
 <style>
+    .container {
+    margin-left: -150px; /* Adjust this value as needed */
+}
     .title {
         background-color: black;
         color: white;
